bugfixes and added some visualizations
- retinanet resize transform removed for evaluation
- vis functions moved to the core project
- added saving results for eval set in reports

--- a/backbone_feat_vis_resnet50.ipynb
+++ b/backbone_feat_vis_resnet50.ipynb
@@ -73,6 +73,7 @@
     "transform = Compose(\n",
     "    [\n",
     "        ToTensor(device),\n",
+    "        Resize((400, 400)),\n",
     "        Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225]),\n",
     "    ]\n",
     ")\n",
@@ -111,6 +112,20 @@
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../dataset \\\n",
     "                            --load_from_json \\\n",
+    "                            --log_dir $(pwd)/experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
+    "                            --batch_size 1 \\\n",
+    "                            --tag 0_1_largeImageEval_det_scratch \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_0_1_det_scratch.pth \\\n",
+    "                            --data_dir $(pwd)/../dataset/abc \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
   },
@@ -202,6 +217,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
+    "                            --batch_size 1 \\\n",
+    "                            --tag 0_2_largeImageEval_det_transferlr \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_0_2_det_transferlr.pth \\\n",
+    "                            --data_dir $(pwd)/../dataset/abc \\\n",
+    "                            --log_dir $(pwd)/experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "F2jopSu_y3gl"
    },
@@ -266,19 +295,20 @@
    "execution_count": null,
    "metadata": {
     "id": "E3DU00viFGPV",
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/image_cls_train.py \\\n",
     "                        --opt adam \\\n",
-    "                        --lr 1e-5 \\\n",
+    "                        --lr 1e-4 \\\n",
     "                        --lr_delta 1e-5 \\\n",
-    "                        --lr_warmup 1e-1 \\\n",
-    "                        --weight_decay 0 \\\n",
-    "                        --max_epoch 100 \\\n",
+    "                        --lr_warmup 4e-2 \\\n",
+    "                        --weight_decay 4e-5 \\\n",
+    "                        --max_epoch 130 \\\n",
     "                        --batch_size 12 \\\n",
-    "                        --accumulation_steps 1 \\\n",
+    "                        --accumulation_steps 3 \\\n",
     "                        --tag 1_1_img_cls_scratch \\\n",
     "                        --train_percent .90 \\\n",
     "                        --use_p_of_data 1 \\\n",
@@ -376,6 +406,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
+    "                            --batch_size 1 \\\n",
+    "                            --tag 1_2_largeImageEval_ft_det_scratch \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_1_2_ft_det_scratch.pth \\\n",
+    "                            --data_dir $(pwd)/../dataset/abc \\\n",
+    "                            --log_dir $(pwd)/experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "F2jopSu_y3gl"
    },
@@ -453,7 +497,7 @@
     "                            --max_epoch 130 \\\n",
     "                            --batch_size 12 \\\n",
     "                            --accumulation_steps 3 \\\n",
-    "                            --tag avg_2_1_img_cls_transferlr \\\n",
+    "                            --tag 2_1_img_cls_transferlr \\\n",
     "                            --pretrained_backend \\\n",
     "                            --train_percent .90 \\\n",
     "                            --use_p_of_data 1 \\\n",
@@ -545,6 +589,20 @@
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../dataset \\\n",
     "                            --load_from_json \\\n",
+    "                            --log_dir $(pwd)/experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
+    "                            --batch_size 1 \\\n",
+    "                            --tag 2_2_largeImageEval_ft_det_transferlr \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_2_ft_det_transferlr.pth \\\n",
+    "                            --data_dir $(pwd)/../dataset/abc \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
   },
