--- a/backbone_feat_vis_resnet50.ipynb
+++ b/backbone_feat_vis_resnet50.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%config Completer.use_jedi = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
     "import torchvision\n",
     "import torch.nn.functional as F\n",
@@ -98,6 +107,7 @@
    "execution_count": null,
    "metadata": {
     "id": "E3DU00viFGPV",
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -107,7 +117,7 @@
     "                            --lr_delta 1e-5 \\\n",
     "                            --max_epoch 100 \\\n",
     "                            --batch_size 4 \\\n",
-    "                            --tag 0_1_det_scratch \\\n",
+    "                            --tag 0_1.det_scratch \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../dataset \\\n",
@@ -123,8 +133,8 @@
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
     "                            --batch_size 1 \\\n",
-    "                            --tag 0_1_largeImageEval_det_scratch \\\n",
-    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_0_1_det_scratch.pth \\\n",
+    "                            --tag 0_1_largeImageEval.det_scratch \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_0_1.det_scratch.pth \\\n",
     "                            --data_dir $(pwd)/../dataset/abc \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
@@ -137,13 +147,15 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_0_1_det_scratch.pth\"))"
+    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_0_1.det_scratch.pth\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "idx = random.randint(0, len(dataset)-1)\n",
@@ -196,6 +208,7 @@
    "execution_count": null,
    "metadata": {
     "id": "E3DU00viFGPV",
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -205,7 +218,7 @@
     "                            --lr_delta 1e-5 \\\n",
     "                            --max_epoch 100 \\\n",
     "                            --batch_size 4 \\\n",
-    "                            --tag 0_2_det_transferlr \\\n",
+    "                            --tag 0_2.det_transferlr \\\n",
     "                            --pretrained_backend \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
@@ -222,8 +235,8 @@
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
     "                            --batch_size 1 \\\n",
-    "                            --tag 0_2_largeImageEval_det_transferlr \\\n",
-    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_0_2_det_transferlr.pth \\\n",
+    "                            --tag 0_2_largeImageEval.det_transferlr \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_0_2.det_transferlr.pth \\\n",
     "                            --data_dir $(pwd)/../dataset/abc \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
@@ -236,7 +249,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_0_2_det_transferlr.pth\"))"
+    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_0_2.det_transferlr.pth\"))"
    ]
   },
   {
@@ -309,7 +322,7 @@
     "                        --max_epoch 130 \\\n",
     "                        --batch_size 12 \\\n",
     "                        --accumulation_steps 3 \\\n",
-    "                        --tag 1_1_img_cls_scratch \\\n",
+    "                        --tag 1_1.img_cls_scratch \\\n",
     "                        --train_percent .90 \\\n",
     "                        --use_p_of_data 1 \\\n",
     "                        --data_dir $(pwd)/../data/train \\\n",
@@ -325,7 +338,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_1_1_img_cls_scratch.pth\"))"
+    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_1_1.img_cls_scratch.pth\"))"
    ]
   },
   {
@@ -394,8 +407,8 @@
     "                            --lr_delta 1e-5 \\\n",
     "                            --max_epoch 100 \\\n",
     "                            --batch_size 4 \\\n",
-    "                            --tag 1_2_ft_det_scratch \\\n",
-    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_1_1_img_cls_scratch.pth \\\n",
+    "                            --tag 1_2.ft_det_scratch \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_1_1.img_cls_scratch.pth \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../dataset \\\n",
@@ -411,8 +424,8 @@
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
     "                            --batch_size 1 \\\n",
-    "                            --tag 1_2_largeImageEval_ft_det_scratch \\\n",
-    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_1_2_ft_det_scratch.pth \\\n",
+    "                            --tag 1_2_largeImageEval.ft_det_scratch \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_1_2.ft_det_scratch.pth \\\n",
     "                            --data_dir $(pwd)/../dataset/abc \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
@@ -425,7 +438,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_1_2_ft_det_scratch.pth\"))"
+    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_1_2.ft_det_scratch.pth\"))"
    ]
   },
   {
@@ -497,7 +510,7 @@
     "                            --max_epoch 130 \\\n",
     "                            --batch_size 12 \\\n",
     "                            --accumulation_steps 3 \\\n",
-    "                            --tag 2_1_img_cls_transferlr \\\n",
+    "                            --tag 2_1.img_cls_transferlr \\\n",
     "                            --pretrained_backend \\\n",
     "                            --train_percent .90 \\\n",
     "                            --use_p_of_data 1 \\\n",
@@ -514,7 +527,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_2_1_img_cls_transferlr.pth\"))"
+    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_2_1.img_cls_transferlr.pth\"))"
    ]
   },
   {
@@ -574,6 +587,7 @@
    "execution_count": null,
    "metadata": {
     "id": "E3DU00viFGPV",
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -583,8 +597,8 @@
     "                            --lr_delta 1e-5 \\\n",
     "                            --max_epoch 100 \\\n",
     "                            --batch_size 4 \\\n",
-    "                            --tag 2_2_ft_det_transferlr \\\n",
-    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_1_img_cls_transferlr.pth \\\n",
+    "                            --tag 2_2.ft_det_transferlr \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_1.img_cls_transferlr.pth \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../dataset \\\n",
@@ -600,8 +614,8 @@
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
     "                            --batch_size 1 \\\n",
-    "                            --tag 2_2_largeImageEval_ft_det_transferlr \\\n",
-    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_2_ft_det_transferlr.pth \\\n",
+    "                            --tag 2_2_largeImageEval.ft_det_transferlr \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_2.ft_det_transferlr.pth \\\n",
     "                            --data_dir $(pwd)/../dataset/abc \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
@@ -614,7 +628,7 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_2_2_ft_det_transferlr.pth\"))"
+    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/best_chpt_2_2.ft_det_transferlr.pth\"))"
    ]
   },
   {
@@ -658,6 +672,66 @@
     "# visualize features\n",
     "for j in range(1, 6):\n",
     "    axarr[j//3, j%3].imshow(resize_func(imact[j-1], img.shape[:2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train Image Level Classifier with transfer learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "E3DU00viFGPV",
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/retinanet_image_cls_train.py \\\n",
+    "                            --cls_opt adam \\\n",
+    "                            --cls_lr 1e-4 \\\n",
+    "                            --cls_lr_delta 1e-5 \\\n",
+    "                            --cls_lr_warmup 4e-2 \\\n",
+    "                            --cls_weight_decay 4e-5 \\\n",
+    "                            --cls_batch_size 8 \\\n",
+    "                            --cls_accumulation_steps 3 \\\n",
+    "                            --cls_train_percent .90 \\\n",
+    "                            --cls_use_p_of_data 1 \\\n",
+    "                            --cls_data_dir $(pwd)/../data/train \\\n",
+    "                            --det_opt adam \\\n",
+    "                            --det_lr 3e-5 \\\n",
+    "                            --det_lr_delta 1e-5 \\\n",
+    "                            --det_lr_warmup 4e-2 \\\n",
+    "                            --det_weight_decay 4e-5 \\\n",
+    "                            --det_batch_size 2 \\\n",
+    "                            --det_accumulation_steps 2 \\\n",
+    "                            --det_train_percent .7 \\\n",
+    "                            --det_use_p_of_data 1 \\\n",
+    "                            --det_data_dir $(pwd)/../dataset \\\n",
+    "                            --load_from_json \\\n",
+    "                            --max_epoch 50 \\\n",
+    "                            --pretrained_backend \\\n",
+    "                            --tag 3_0.cls_det_scratch \\\n",
+    "                            --log_dir $(pwd)/experiments\n",
+    "\n",
+    "#                             --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_1_img_cls_transferlr.pth \\"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
+    "                            --batch_size 1 \\\n",
+    "                            --tag 3_0_largeImageEval.cls_det_scratch \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/chpt_3_0.cls_det_scratch.pth \\\n",
+    "                            --data_dir $(pwd)/../dataset/abc \\\n",
+    "                            --log_dir $(pwd)/experiments"
    ]
   }
  ],
