--- a/net_errors.ipynb
+++ b/net_errors.ipynb
@@ -522,6 +522,60 @@
     "    gt_boxes = ds[idx][1][\"boxes\"]\n",
     "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0, device=device, path=f\"reports/ft_det_transferlr/{idx}.jpg\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize intermittent training of image level cls and detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "F2jopSu_y3gl"
+   },
+   "outputs": [],
+   "source": [
+    "model.load_state_dict(torch.load(\"/workspace8/RetinaNet/experiments/checkpoints/chpt_3_0.cls_det_scratch.pth\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = large_dataset\n",
+    "idx = random.randint(0, len(ds)-1)\n",
+    "img = ds[idx][0]\n",
+    "gt_boxes = ds[idx][1][\"boxes\"]\n",
+    "\n",
+    "fig = vis_features(model, img, gt_boxes=gt_boxes, threshold=0.0, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = large_dataset\n",
+    "for idx, d in enumerate(ds):\n",
+    "    img = ds[idx][0]\n",
+    "    gt_boxes = ds[idx][1][\"boxes\"]\n",
+    "    fig = vis_features_CAM(model, img, gt_boxes=gt_boxes, threshold=0, device=device, path=f\"reports/cls_det_scratch/{idx}.jpg\")"
+   ]
   }
  ],
  "metadata": {
