repalced coarse features with finer ones
- results improved sinificantly
todo: may be we can use even finer features

--- a/backbone_feat_vis_resnet50.ipynb
+++ b/backbone_feat_vis_resnet50.ipynb
@@ -117,7 +117,7 @@
     "                            --lr_delta 1e-5 \\\n",
     "                            --max_epoch 100 \\\n",
     "                            --batch_size 4 \\\n",
-    "                            --tag 0_1.det_scratch \\\n",
+    "                            --tag 0_1.det_scratch_test \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../dataset \\\n",
@@ -218,7 +218,7 @@
     "                            --lr_delta 1e-5 \\\n",
     "                            --max_epoch 100 \\\n",
     "                            --batch_size 4 \\\n",
-    "                            --tag 0_2.det_transferlr \\\n",
+    "                            --tag 0_2.det_transferlr_test \\\n",
     "                            --pretrained_backend \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
@@ -322,7 +322,7 @@
     "                        --max_epoch 130 \\\n",
     "                        --batch_size 12 \\\n",
     "                        --accumulation_steps 3 \\\n",
-    "                        --tag 1_1.img_cls_scratch \\\n",
+    "                        --tag 1_1.img_cls_scratch_test \\\n",
     "                        --train_percent .90 \\\n",
     "                        --use_p_of_data 1 \\\n",
     "                        --data_dir $(pwd)/../data/train \\\n",
@@ -407,8 +407,8 @@
     "                            --lr_delta 1e-5 \\\n",
     "                            --max_epoch 100 \\\n",
     "                            --batch_size 4 \\\n",
-    "                            --tag 1_2.ft_det_scratch \\\n",
-    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_1_1.img_cls_scratch.pth \\\n",
+    "                            --tag 1_2.ft_det_scratch_test \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_1_1_img_cls_scratch.pth \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
     "                            --data_dir $(pwd)/../dataset \\\n",
@@ -597,11 +597,11 @@
     "                            --lr_delta 1e-5 \\\n",
     "                            --max_epoch 100 \\\n",
     "                            --batch_size 4 \\\n",
-    "                            --tag 2_2.ft_det_transferlr \\\n",
-    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_1.img_cls_transferlr.pth \\\n",
+    "                            --tag 2_2.ft_det_transferlr_test \\\n",
+    "                            --pretrained $(pwd)/experiments/checkpoints/best_chpt_2_1_img_cls_transferlr.pth \\\n",
     "                            --train_percent .7 \\\n",
     "                            --use_p_of_data 1 \\\n",
-    "                            --data_dir $(pwd)/../dataset \\\n",
+    "                            --data_dir $(pwd)/../dataset/segmented_detection \\\n",
     "                            --load_from_json \\\n",
     "                            --log_dir $(pwd)/experiments"
    ]
@@ -728,7 +728,7 @@
    "source": [
     "!PYTHONPATH=$(pwd) python ./scripts/large_img_evaluation.py \\\n",
     "                            --batch_size 1 \\\n",
-    "                            --tag 3_0_largeImageEval.cls_det_scratch \\\n",
+    "                            --tag 3_0_largeImageEval.cls_det_scratch_new \\\n",
     "                            --pretrained $(pwd)/experiments/checkpoints/chpt_3_0.cls_det_scratch.pth \\\n",
     "                            --data_dir $(pwd)/../dataset/abc \\\n",
     "                            --log_dir $(pwd)/experiments"
